# sEMG-innervation-zone-estimation

./: .gitignore  Cargo.toml  FeatureList.md  Makefile  README.md  docker-compose.yml  pyproject.toml
pysrc/semg_iz_estimation/: __init__.py  _version.py
pysrc/semg_iz_estimation/deprecated/: IZ_tracking_collection.py
sEMG_innervation_zone_estimation/: Cargo.toml
sEMG_innervation_zone_estimation/src/: data.rs  hermite_rodriguez.rs  lib.rs  util.rs  window_functions.rs
sEMG_innervation_zone_estimation/test_data/: hermite_rodriguez.toml  iz_estimation.toml  window_functions.toml
src/: lib.rs
test/: Dockerfile  integration.py
