[package]
name = "sEMG_innervation_zone_estimation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sEMG_innervation_zone_estimation"

[dependencies]
dbscan = "0.3.1"
num-traits = "0.2.17"
itertools = "0.12.0"
float-cmp = "0.9.0"
factorial = "0.4.0"
threadpool = "1.8.1"

[dev-dependencies]
serde_derive = "1.0.193"
serde = "1.0.193"
toml = "0.8.8"
plotters = "0.3.5"
plotters-svg = "0.3.5"
